# shifty

./: .gitignore  223p-closure.ttl  223p.ttl  223test.sh  AGENTS.md  AOT-TODO.md  ARCHITECTURE.md  BENCHMARKING.md  BRICK_VS_S223_MEMOIZATION.md  Brick.ttl  COST_MODEL_DESIGN.md  Cargo.toml  GEMINI.md  LICENSE  MEMOIZATION_BENCHMARK_RESULTS.md  NEXT_STEPS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZE.md  PR.md  PRODUCTION_READINESS.md  PROFILE.md  README.md  REVIEW.md  SHACLAF_PLAN.md  SPARQL_COMPILATION_FEASIBILITY.md  V2DESIGN.md  air_quality_sensor_example.ttl  benchmark-2026-03-30.csv  benchmark-2026-03-31.csv  benchmark-2026-04-04.csv  folded.txt  generate_flamegraph.py  moretodo  nist-bdg1-1.ttl  openworld.ttl  pyshacl.ttl  run_benchmarks.py  run_benchmarks_hyperfine.py  (+8 more)
cli/: Cargo.toml
cli/src/: compiled_binary_main.rs.tmpl  main.rs
cpp/: CMakeLists.txt  Cargo.toml  README.md
cpp/cmake/: ShiftyConfig.cmake.in
cpp/example/: CMakeLists.txt  main.cpp
cpp/include/shifty/: shifty.h  shifty.hpp
cpp/src/: lib.rs
cpp/tests/: smoke.cpp
cpp/tests/consumer/: CMakeLists.txt  main.cpp
crates/shacl-algebra/: Cargo.toml
crates/shacl-algebra/src/: expr.rs  lib.rs  path.rs  render.rs  rule.rs  schema.rs  shape.rs  sparql.rs  term.rs  value_type.rs
crates/shacl-cli/: Cargo.toml
crates/shacl-cli/src/: main.rs
crates/shacl-cli/tests/: validate_union.rs
crates/shacl-compiler/: Cargo.toml
crates/shacl-compiler/src/: lib.rs  main.rs
crates/shacl-core/: Cargo.toml
crates/shacl-core-cli/: Cargo.toml
crates/shacl-core-cli/src/: main.rs
crates/shacl-core-inmemory/: Cargo.toml
crates/shacl-core-inmemory/src/: lib.rs  physical.rs
crates/shacl-core/src/: algebra.rs  analysis.rs  backend_views.rs  data_graph.rs  diagnostics.rs  execute.rs  lib.rs  parse.rs  passes.rs  plan.rs  render.rs  report.rs  rewrite.rs  source.rs  static_analysis.rs  syntax.rs
crates/shacl-core/tests/: core.rs  manifests.rs  ontoenv.rs
crates/shacl-engine/: Cargo.toml
crates/shacl-engine/examples/: bench.rs
crates/shacl-engine/src/: frozen.rs  infer.rs  lib.rs  native_exec.rs  path.rs  path_plan.rs  profile.rs  report.rs  sparql.rs  validate.rs  value.rs
crates/shacl-engine/tests/: data_shapes_report.rs  differential.rs  graph_modes.rs  sparql.rs  sparql_target_report.rs  w3c_advanced.rs  w3c_core.rs  w3c_sparql.rs
crates/shacl-parse/: Cargo.toml
crates/shacl-parse/src/: diagnostics.rs  graph.rs  lib.rs  lower.rs  path.rs  vocab.rs
crates/shacl-srcgen-compiler/: Cargo.toml
crates/shacl-srcgen-compiler/src/: lib.rs  main.rs
crates/shacl-srcgen-compiler/tests/: snapshot.rs
crates/shifty-cli/: Cargo.toml
crates/shifty-cli/src/: main.rs
crates/shifty-cli/tests/: validate_union.rs
crates/shifty-engine/: Cargo.toml
crates/shifty-engine/examples/: bench.rs
crates/shifty-engine/src/: enumerate.rs  frozen.rs  gate.rs  infer.rs  lib.rs  native_exec.rs  path.rs  path_plan.rs  profile.rs  report.rs  sparql.rs  synthesize.rs  validate.rs  value.rs  witness.rs
crates/shifty-engine/tests/: data_shapes_report.rs  differential.rs  graph_modes.rs  property_witnesses.rs  report_messages.rs  sparql.rs  sparql_target_report.rs  w3c_advanced.rs  w3c_core.rs  w3c_sparql.rs
crates/shifty-opt/: Cargo.toml
crates/shifty-opt/src/: deps.rs  lib.rs  normalize.rs  plan.rs  rule_deps.rs  strata.rs
crates/shifty-parse/: Cargo.toml
crates/shifty-parse/src/: diagnostics.rs  graph.rs  lib.rs  lower.rs  path.rs  sparql_path.rs  vocab.rs
crates/shifty-repair/: Cargo.toml
crates/shifty-repair/src/: instantiate.rs  ir.rs  lib.rs
crates/shifty-wasm/: .gitignore  Cargo.toml  README.md  build.sh
crates/shifty-wasm/ci/: smoke.mjs
crates/shifty-wasm/example/: app.js  index.html  style.css  worker.js
crates/shifty-wasm/src/: lib.rs
crates/ts-generator/: Cargo.toml
crates/ts-generator/src/: main.rs
docs/: 00-formalism.md  01-gap-analysis.md  02-roadmap.md  03-recursion-semantics.md  04-normalization.md  05-sparql-execution.md  06-repair.md  07-repair-drivers.md  ARCHITECTURE.md  BACKLOG.md  INFERENCE_OPTIMIZATION_SUMMARY.md  README.md  SPARQL_BATCHING_INVESTIGATION.md  aot-shared-kernel-design.md  benchmark.rst  conf.py  data-shapes-harness.md  feature-support.rst  getting-started.rst  human-readable-output.md  index.rst  playground.rst  pyproject.toml  srcgen-first-compiler-design.md  static-analysis-plan.md
docs/_static/: benchmark_data.js  custom.css
docs/cli/: index.rst
docs/extra/playground/: .gitignore  app.js  index.html  style.css  worker.js
docs/paper/: .gitignore  shifty-theory.tex
docs/python-api/: index.rst
lib/: Cargo.toml  build.rs  compiled-expected.ttl  compiled-report.ttl
lib/src/: backend.rs  canonicalization.rs  component_memo.rs  components.rs  context.rs  ir.rs  ir_cache.rs  lib.rs  named_nodes.rs  optimize.rs  parser.rs  planning.rs  report.rs  shacl_ir.rs  shape.rs  skolem.rs  target_hash.rs  test_utils.rs  trace.rs  types.rs  validate.rs
lib/src/compiled_runtime/: constraint_kernels.rs  cost_model.rs  kernel.rs  mod.rs  path.rs  program.rs  report.rs
lib/src/components/: cardinality.rs  logical.rs  other.rs  property_pair.rs  shape_based.rs  sparql.rs  string_based.rs  value_range.rs  value_type.rs
lib/src/context/: graphviz.rs  ids.rs  mod.rs  model.rs  validation.rs
lib/src/model/: mod.rs  (+3 more)
lib/tests/: compiled_manifest_test.rs  compiler_srcgen_parity_cli.rs  isomorphism_cli.rs  manifest_test.rs  rewrite-tests.py
python/: .gitignore  Cargo.toml  README.md  brick.py  example.py  example_ir_cache.py  pyproject.toml  shacl_rs.pyi  shifty.pyi
python/benchmarks/: large_graph.py
python/docs/: api.rst  conf.py  usage.rst
python/examples/: repair.py  repair_interactive.py  validate.py  witnesses.py
python/shifty/: __init__.py
python/src/: lib.rs  repair.rs
python/tests/: TEST_SUMMARY.md  test_bindings.py  test_convert.py  test_errors.py  test_prepared.py  test_repair.py  test_results.py  test_shacl_features.py  test_shifty.py  test_w3c_suite.py  test_witnesses.py
shacl-ir/: Cargo.toml
(+450 files in other folders)
