[workspace]
members = [
    "crates/shifty-algebra",
    "crates/shifty-parse",
    "crates/shifty-opt",
    "crates/shifty-engine",
    "crates/shifty-cli",
    "cpp",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "BSD-3-Clause"
edition = "2024"
description = "Formalism-first SHACL + SHACL-AF engine (inference + validation) in Rust"
readme = "README.md"
repository = "https://github.com/gtfierro/shifty"
homepage = "https://github.com/gtfierro/shifty"
documentation = "https://github.com/gtfierro/shifty#readme"

[workspace.dependencies]
# internal crates
shifty-algebra = { path = "crates/shifty-algebra", version = "0.1.1" }
shifty-parse = { path = "crates/shifty-parse", version = "0.1.1" }
shifty-opt = { path = "crates/shifty-opt", version = "0.1.1" }
shifty-engine = { path = "crates/shifty-engine", version = "0.1.1" }

# external
oxrdf = { version = "=0.3.3", features = ["serde", "oxsdatatypes"] }
oxsdatatypes = "0.2.2"
oxttl = "0.2.3"
oxigraph = { version = "0.5.5", default-features = false }
spargebra = { version = "=0.4.6", features = ["sep-0006"] }
spareval = "=0.2.6"
petgraph = "0.6"
clap = { version = "4.5.39", features = ["derive"] }
ureq = { version = "2", features = ["tls"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparesults = "0.3.3"

[profile.release]
debug = true
