[workspace]
members = [
    "crates/shifty-algebra",
    "crates/shifty-parse",
    "crates/shifty-opt",
    "crates/shifty-engine",
    "crates/shifty-repair",
    "crates/shifty-cli",
    "crates/shifty-wasm",
    "cpp",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "BSD-3-Clause"
edition = "2024"
description = "Formalism-first SHACL + SHACL-AF engine (inference + validation) in Rust"
readme = "README.md"
repository = "https://github.com/gtfierro/shifty"
homepage = "https://github.com/gtfierro/shifty"
documentation = "https://github.com/gtfierro/shifty#readme"

[workspace.dependencies]
# internal crates
shifty-algebra = { path = "crates/shifty-algebra", version = "0.2.0" }
shifty-parse = { path = "crates/shifty-parse", version = "0.2.0" }
shifty-opt = { path = "crates/shifty-opt", version = "0.2.0" }
shifty-engine = { path = "crates/shifty-engine", version = "0.2.0" }
shifty-repair = { path = "crates/shifty-repair", version = "0.2.0" }

# external
oxrdf = { version = "=0.3.3", features = ["serde", "oxsdatatypes"] }
oxrdfio = "=0.2.4"
oxsdatatypes = "0.2.2"
bigdecimal = "0.4"
oxttl = "0.2.3"
oxigraph = { version = "0.5.5", default-features = false }
spargebra = { version = "=0.4.6", features = ["sep-0006"] }
spareval = "=0.2.6"
petgraph = "0.6"
clap = { version = "4.5.39", features = ["derive"] }
ureq = { version = "2", features = ["tls"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sparesults = "0.3.3"
# Monotonic clock that maps to std::time on native and performance.now() on
# wasm32 (std::time::Instant panics there). Drop-in API-compatible with std.
web-time = "1.1"

[profile.release]
debug = true

# Slim profile for the wasm bundle: the workspace `release` keeps full debuginfo
# (for perf), which balloons the .wasm to ~100 MB. Build the browser module with
# `--profile wasm-release` to strip it and optimize for size.
[profile.wasm-release]
inherits = "release"
debug = false
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
