[package]
name = "cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "shifty"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
graphviz-rust.workspace = true
shacl.workspace = true
shacl-ir = { path = "../shacl-ir" }
oxigraph.workspace = true
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
