[package]
name = "cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "shifty"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
graphviz-rust.workspace = true
shifty.workspace = true
shacl-compiler2 = { path = "../crates/shacl-compiler2", optional = true }
oxigraph.workspace = true
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
shacl-compiler2 = ["dep:shacl-compiler2"]
