[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shifty-docs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.0",
    "furo>=2024.1",
]

[dependency-groups]
dev = [
    "sphinx>=7.0",
    "furo>=2024.1",
]

[tool.setuptools]
packages = []
