[package]
name = "shacl"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
oxigraph.workspace = true
oxsdatatypes = "0.2.2"
papaya = "0.2.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
regex = { workspace = true }
log = { workspace = true }
url = { workspace = true }
paste = "1.0.15"
petgraph = { version = "0.8.2", features = ["rayon"] }
sha2 = { workspace = true }
rayon = "1.10.0"
spargebra = "0.4"
ntest = "0.9.3"
ontoenv = "0.4.0-a9"
shacl-ir = { path = "../shacl-ir" }

[build-dependencies]
oxigraph.workspace = true
url = { version = "2" }
