[package]
name = "shifty-shacl"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "shifty"

[dependencies]
oxigraph.workspace = true
oxrdf = { workspace = true }
oxsdatatypes = "0.2.2"
papaya = "0.2.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
regex = { workspace = true }
log = { workspace = true }
url = { workspace = true }
paste = "1.0.15"
petgraph = { version = "0.8.2", features = ["rayon"] }
sha2 = { workspace = true }
rayon = "1.10.0"
spargebra = "0.4"
ntest = "0.9.3"
ontoenv = "0.5.0-a2"
#ontoenv = { path = "../../ontoenv-rs/lib" }
serde_json.workspace = true
serde = { workspace = true }
fixedbitset = "0.5.7"

[features]
compiled-tests = []

[build-dependencies]
oxrdf = { workspace = true }
oxrdfio = "0.2.1"
url = { version = "2" }

[dev-dependencies]
shacl-compiler = { path = "../crates/shacl-compiler" }
