[package]
name = "pyshifty"
version.workspace = true
edition.workspace = true

[lib]
name = "_shifty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
shacl-algebra.workspace = true
shacl-parse.workspace = true
shacl-opt.workspace = true
shacl-engine.workspace = true
oxrdf.workspace = true
oxttl.workspace = true
