[package]
name = "pyshifty"
version.workspace = true
edition.workspace = true

[lib]
name = "_shifty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
shifty-algebra.workspace = true
shifty-parse.workspace = true
shifty-opt.workspace = true
shifty-engine.workspace = true
oxrdf.workspace = true
oxttl.workspace = true
