[package]
name = "pyshifty"
version.workspace = true
edition.workspace = true
description = "Python bindings for the shifty SHACL engine"
license = "BSD-3-Clause"
documentation = "https://github.com/gtfierro/shifty#readme"
homepage = "https://github.com/gtfierro/shifty"
repository = "https://github.com/gtfierro/shifty"

[lib]
name = "_shifty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
shifty-algebra.workspace = true
shifty-parse.workspace = true
shifty-opt.workspace = true
shifty-engine.workspace = true
oxrdf.workspace = true
oxttl.workspace = true
