[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "shacl-rs"
version = "0.1.0"
description = "Python bindings for the shacl-rs validation engine"
authors = [{ name = "Gabe Fierro", email = "gtfierro@mines.edu" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "maturin>=1.9.6",
    "ontoenv>=0.4.0",
    "rdflib>=7.4.0",
]

[project.urls]
Repository = "https://github.com/gtfierro/shacl-rs"

[tool.maturin]
bindings = "pyo3"
module-name = "shacl_rs"

[tool.maturin.sdist]
include = [
    "README.md",
    "Cargo.toml",
    "pyproject.toml",
    "src/**",
    "build.rs",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}, {file = "../lib/Cargo.toml"}, {file = "../lib/**/*.rs"}]
