[package]
name = "shacl-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "CLI for the formalism-first SHACL engine: inspect, validate, infer"
repository.workspace = true

[[bin]]
name = "shacl"
path = "src/main.rs"

[dependencies]
shacl-algebra.workspace = true
shacl-parse.workspace = true
shacl-opt.workspace = true
shacl-engine.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
