[package]
name = "shacl-compiler"
version = "0.0.6"
edition = "2021"
description = "Prototype SHACL compiler that emits specialized Rust code"

[dependencies]
clap = { workspace = true, features = ["derive"] }
oxigraph = { workspace = true }
shifty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
