[package]
name = "shifty-shacl-core-inmemory"
version.workspace = true
edition.workspace = true
description = "In-memory validation backend for shifty-shacl-core"
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
oxigraph = { workspace = true, default-features = false }
oxrdf = { workspace = true }
oxsdatatypes = "0.2.2"
regex = { workspace = true }
serde = { workspace = true }
shifty-shacl-core = { path = "../shacl-core" }
