[package]
name = "shacl-engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "SHACL validation and SHACL-AF inference execution over the IR"
repository.workspace = true

[dependencies]
shacl-algebra.workspace = true
shacl-parse.workspace = true
shacl-opt.workspace = true
oxrdf.workspace = true
oxigraph.workspace = true
serde.workspace = true
log.workspace = true
