[package]
name = "shifty-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "CLI for the formalism-first SHACL engine: inspect, validate, infer"
repository.workspace = true

[[bin]]
name = "shifty"
path = "src/main.rs"

[dependencies]
shifty-algebra.workspace = true
shifty-parse.workspace = true
shifty-opt.workspace = true
shifty-engine.workspace = true
shifty-repair.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
spargebra.workspace = true
ureq.workspace = true
oxttl.workspace = true
