[package]
name = "shifty-engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "SHACL validation and SHACL-AF inference execution over the IR"
repository.workspace = true

[dependencies]
shifty-algebra.workspace = true
shifty-parse.workspace = true
shifty-opt.workspace = true
oxrdf.workspace = true
oxsdatatypes.workspace = true
oxigraph.workspace = true
spargebra.workspace = true
spareval.workspace = true
serde.workspace = true
log.workspace = true
regex.workspace = true

[dev-dependencies]
serde_json.workspace = true
