[package]
name = "shifty-parse"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Lower an RDF shapes graph into the SHACL formalism IR"
repository.workspace = true

[dependencies]
shifty-algebra.workspace = true
oxrdf.workspace = true
oxrdfio.workspace = true
oxttl.workspace = true
spargebra.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
